--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
     "@pinata/sdk": "^2.1.0",
+    "@project-serum/anchor": "^0.26.0",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
@@ -29,7 +30,7 @@
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.34",
     "@solana/wallet-adapter-wallets": "^0.19.22",
-    "@solana/web3.js": "^1.78.5",
+    "@solana/web3.js": "^1.87.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
@@ -55,8 +56,6 @@
     "next-auth": "^4.23.0",
     "next-themes": "^0.2.1",
     "noble-secp256k1": "^1.2.14",
-    "nostr-hooks": "^1.6.8",
-    "nostr-tools": "^1.10.1",
     "path": "^0.12.7",
     "qr-code-styling": "^1.6.0-rc.1",
     "react": "18.2.0",
@@ -68,8 +67,6 @@
     "tailwindcss-animate": "^1.0.7",
     "tweetnacl": "^1.0.3",
     "typescript": "5.0.4",
-    "viem": "^1.7.0",
-    "wagmi": "^1.3.10",
     "zod": "^3.22.2",
     "zustand": "^4.3.8"
   },
