integrated sui zklogin

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fontsource/lato": "^4.5.10",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
+    "@mysten/sui.js": "^0.44.0",
+    "@mysten/zklogin": "^0.3.2",
     "@pinata/sdk": "^2.1.0",
     "@project-serum/anchor": "^0.26.0",
     "@radix-ui/react-alert-dialog": "^1.0.4",
@@ -24,13 +26,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@solana-mobile/wallet-adapter-mobile": "^2.0.1",
-    "@solana/wallet-adapter-base": "^0.9.23",
-    "@solana/wallet-adapter-phantom": "^0.9.24",
-    "@solana/wallet-adapter-react": "^0.15.35",
-    "@solana/wallet-adapter-react-ui": "^0.9.34",
-    "@solana/wallet-adapter-wallets": "^0.19.22",
-    "@solana/web3.js": "^1.87.1",
+    "@suiet/wallet-kit": "^0.2.19",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
@@ -48,6 +44,7 @@
     "fs": "^0.0.1-security",
     "fuse.js": "^6.6.2",
     "is-ipfs": "^8.0.1",
+    "js-cookie": "^3.0.5",
     "light-bolt11-decoder": "^3.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.4.3",
@@ -71,6 +68,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.5",
     "@types/lodash": "^4.14.194",
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.8.0",
